<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_detail">contactDetail</string>
    <string name="title_activity_contact_edit">ContactEdit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="clear" />
    <string name="cancelContact" />
    <string name="delete" />
</resources>
